# ska-sdp-func

./: .clang-tidy  .flake8  .gitignore  .gitlab-ci.yml  .make-support  .readthedocs.yaml  .release  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  Makefile  README.md  build.py  compile_commands.json  minitest.py  ms_operations.py  pylintrc  pyproject.toml  pytest.ini  setup.py  uncrustify.cfg
src/ska-sdp-func/: CMakeLists.txt  sdp_func_global.h
src/ska-sdp-func/clean/: CMakeLists.txt  sdp_hogbom_clean.cpp  sdp_hogbom_clean.cu  sdp_hogbom_clean.h  sdp_ms_clean.cpp  sdp_ms_clean_cornwell.cpp  sdp_ms_clean_cornwell.h  sdp_ms_clean_ws_clean.cpp  sdp_ms_clean_ws_clean.h
src/ska-sdp-func/deconvolution_msmfs/: .gitignore  CMakeLists.txt  Msmfscommon.h  Msmfsfunctionshost.cu  Msmfsfunctionshost.h  Msmfslibrarytest.cpp  Msmfslibrarytest.h  Msmfslogger.c  Msmfslogger.h  Msmfsprocessingfunctioninterface.cpp  Msmfsprocessingfunctioninterface.h  Msmfsprocessingfunctiontest.c  Msmfsprocessingfunctiontest.cpp  Msmfsprocessingfunctiontest.h  Msmfssimpletest.cu  Msmfssimpletest.h
src/ska-sdp-func/degrid_uvw_custom/: CMakeLists.txt  sdp_degrid_uvw_custom.cpp  sdp_degrid_uvw_custom.cu  sdp_degrid_uvw_custom.h
src/ska-sdp-func/degridding/: sdp_cpu_degrid.cpp  sdp_degrid_uvw_custom.cpp  sdp_degrid_uvw_custom.cu  sdp_degrid_uvw_custom.h  sdp_degridding.cpp  sdp_degridding.h
src/ska-sdp-func/dft/: CMakeLists.txt  sdp_dft.cpp  sdp_dft.cu  sdp_dft.h
src/ska-sdp-func/examples/: CMakeLists.txt  sdp_function_example_a.cpp  sdp_function_example_table.cpp  sdp_function_example_table.h  sdp_vector_add.cpp  sdp_vector_add.cu
src/ska-sdp-func/fft/: sdp_fft.cpp  sdp_fft.h
src/ska-sdp-func/fourier_transforms/: CMakeLists.txt  pocketfft_hdronly.h  private_pswf.h  sdp_fft.cpp  sdp_fft.cu  sdp_fft.h  sdp_fft_padded_size.h  sdp_fft_phase.cu  sdp_mem_utils.h  sdp_pswf.cpp  sdp_pswf.h  sdp_swiftly.cpp  sdp_swiftly.h
src/ska-sdp-func/function_example_a/: CMakeLists.txt  sdp_function_example_a.cpp  sdp_function_example_a.h
src/ska-sdp-func/gain_calibration_svd/: CMakeLists.txt  Gaincalfunctionsdevice.cu  Gaincalfunctionsdevice.h  Gaincalfunctionshost.cu  Gaincalfunctionshost.h  Gaincallibrarytest.cpp  Gaincallibrarytest.h  Gaincallogger.c  Gaincallogger.h  Gaincalprocessingfunctioninterface.cpp  Gaincalprocessingfunctioninterface.h  Gaincalprocessingfunctiontest.c  Gaincalprocessingfunctiontest.h  Gaincalsimpletest.cu  Gaincalsimpletest.h
src/ska-sdp-func/grid_data/: CMakeLists.txt  sdp_degrid_uvw_custom.cpp  sdp_degrid_uvw_custom.cu  sdp_degrid_uvw_custom.h  sdp_grid_uvw_es.cpp  sdp_grid_uvw_es.cu  sdp_grid_uvw_es.h  sdp_grid_wstack_wtower.cpp  sdp_grid_wstack_wtower.h  sdp_gridder_clamp_channels.cpp  sdp_gridder_clamp_channels.cu  sdp_gridder_clamp_channels.h  sdp_gridder_direct.cpp  sdp_gridder_direct.h  sdp_gridder_grid_correct.cpp  sdp_gridder_grid_correct.cu  sdp_gridder_grid_correct.h  sdp_gridder_utils.cpp  sdp_gridder_utils.cu  sdp_gridder_utils.h  sdp_gridder_uvw_es_fft.cpp  sdp_gridder_uvw_es_fft.h  sdp_gridder_uvw_es_fft_kernels.cu  sdp_gridder_uvw_es_fft_utils.cpp  sdp_gridder_uvw_es_fft_utils.h  sdp_gridder_wtower_height.cpp  sdp_gridder_wtower_height.h  sdp_gridder_wtower_uvw.cpp  sdp_gridder_wtower_uvw.cu  sdp_gridder_wtower_uvw.h  sdp_tiling.cpp  sdp_tiling.cu  sdp_tiling.h
src/ska-sdp-func/grid_uvw_es_fft/: sdp_grid_uvw_es_fft.cpp  sdp_grid_uvw_es_fft.h  sdp_grid_uvw_es_fft_utils.cpp  sdp_grid_uvw_es_fft_utils.h
src/ska-sdp-func/gridder/: nifty_utils.cpp  sdp_cuda_nifty_gridder_kernels.cu  sdp_grid_uvw_es_fft.cpp  sdp_grid_uvw_es_fft_utils.cpp  sdp_gridder.cpp  sdp_gridder.h
src/ska-sdp-func/gridder_uvw_es_fft/: sdp_gridder_uvw_es_fft.cpp  sdp_gridder_uvw_es_fft.h  sdp_gridder_uvw_es_fft_kernels.cu  sdp_gridder_uvw_es_fft_utils.cpp  sdp_gridder_uvw_es_fft_utils.h
src/ska-sdp-func/math/: CMakeLists.txt  sdp_legendre_polynomial.h  (+4 more)
tests/: CMakeLists.txt  __init__.py  test_deconvolution_msmfs.cpp  test_deconvolution_msmfs.py  test_degrid_uvw_custom.cpp  test_degrid_uvw_custom.py  test_degridding.cpp  test_dft.cpp  test_dft.py  test_fft.cpp  test_fft.py  test_function_a.cpp  test_function_a.py  test_function_example_a.cpp  test_function_example_a.py  test_gridder.py  test_gridder_uvw_es_fft.cpp  test_gridder_uvw_es_fft.py  test_phase_rotate.cpp  test_phase_rotate.py  test_rfi_flagger.cpp  test_rfi_flagger.py  test_sky_coord.py  test_sky_function.cpp  test_sky_function.py  test_twosm_rfi_flagger.cpp  test_twosm_rfi_flagger.py  test_vector_add.cpp  test_vector_add.py  test_weighting.py
tests/clean/: CMakeLists.txt  test_hogbom_clean.cpp  test_hogbom_clean.py  test_ms_clean_cornwell.cpp  test_ms_clean_cornwell.py  test_ms_clean_ws_clean.cpp  test_ms_clean_ws_clean.py
tests/examples/: CMakeLists.txt  test_function_example_a.cpp  test_function_example_a.py  test_vector_add.cpp  test_vector_add.py
tests/fourier_transforms/: CMakeLists.txt  helpers.py  test_fft.cpp  test_fft.py  test_fft_extended.cpp  test_fft_extended.py  test_pswf.cpp  test_swiftly.cpp  test_swiftly.py  test_swiftly_bench.py
tests/gain_calibration/: CMakeLists.txt  test_gain_calibration_svd.cpp
tests/grid_data/: CMakeLists.txt  test_bucket_sort.py  test_degrid_uvw_custom.cpp  test_degrid_uvw_custom.py  test_gridder_direct.py  test_gridder_uvw_es_fft.cpp  test_gridder_uvw_es_fft.py  test_gridder_wtower_uvw.cpp  test_gridder_wtower_uvw.py  test_sub_grid.py
tests/numeric_functions/: CMakeLists.txt  test_fft_convolution.cpp  test_fft_convolution.py
tests/rfi/: CMakeLists.txt  test_rfi_flagger.cpp  test_rfi_flagger.py  test_twosm_rfi_flagger.cpp  test_twosm_rfi_flagger.py
tests/station_beam/: CMakeLists.txt  test_element_beam.py  test_element_dipole.cpp  test_element_spherical_wave_harp.cpp  test_station_beam.cpp  test_station_beam.py
tests/utility/: test_table.py
tests/visibility/: CMakeLists.txt  test_dft.cpp  test_dft.py  test_flagger.py  test_opt_weighting.py  test_phase_rotate.cpp  test_phase_rotate.py  test_station_based_predict.cpp  test_tiled_functions.py  test_weighting.cpp  test_weighting.py
(+357 files in other folders)
