[tool.poetry]
name = "ska_sdp_func"
version = "0.0.5"
description = "SKA SDP Processing Function Library"
authors = ["The SKA SDP Processing Function Library Developers"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.8.2"
pytest = "^7.1.0"
pytest-bdd = "^4.0.1"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.9.2"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.5.0"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.0.1"
platformdirs = "^2.5.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
