[tool.poetry]
name = "ska_sdp_func"
version = "1.0.1"
description = "SKA SDP Processing Function Library"
authors = ["The SKA SDP Processing Function Library Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func/"
documentation = "https://developer.skao.int/projects/ska-sdp-func/en/latest/"
exclude = ["src/ska-sdp-func"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.7.0"
cupy-cuda12x = { version = "^12.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.8.2"
pytest = "^7.1.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
flake8 = "^3.9.2"
coverage = "^6.1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
breathe = "^4.35.0"
numpy = "^1.26.4"

[tool.poetry.group.test.dependencies]
scipy = "^1.11.0"

[tool.poetry.extras]
cuda = ["cupy-cuda12x"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
profile = "black"
